--- a/patent-data-exploration.ipynb
+++ b/patent-data-exploration.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6cac94a6",
+   "id": "98ab87ec",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-05-19T11:49:05.020343Z",
-     "iopub.status.busy": "2022-05-19T11:49:05.019985Z",
-     "iopub.status.idle": "2022-05-19T11:49:05.033990Z",
-     "shell.execute_reply": "2022-05-19T11:49:05.033253Z"
+     "iopub.execute_input": "2022-05-19T12:05:03.430668Z",
+     "iopub.status.busy": "2022-05-19T12:05:03.429576Z",
+     "iopub.status.idle": "2022-05-19T12:05:03.443239Z",
+     "shell.execute_reply": "2022-05-19T12:05:03.442605Z"
     },
     "papermill": {
-     "duration": 0.028214,
-     "end_time": "2022-05-19T11:49:05.036316",
+     "duration": 0.029141,
+     "end_time": "2022-05-19T12:05:03.445461",
      "exception": false,
-     "start_time": "2022-05-19T11:49:05.008102",
+     "start_time": "2022-05-19T12:05:03.416320",
      "status": "completed"
     },
     "tags": []
@@ -56,19 +56,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "64ba3772",
+   "id": "baa2dd57",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T11:49:05.058250Z",
-     "iopub.status.busy": "2022-05-19T11:49:05.057730Z",
-     "iopub.status.idle": "2022-05-19T11:49:05.164601Z",
-     "shell.execute_reply": "2022-05-19T11:49:05.163846Z"
+     "iopub.execute_input": "2022-05-19T12:05:03.468858Z",
+     "iopub.status.busy": "2022-05-19T12:05:03.468568Z",
+     "iopub.status.idle": "2022-05-19T12:05:03.581694Z",
+     "shell.execute_reply": "2022-05-19T12:05:03.580982Z"
     },
     "papermill": {
-     "duration": 0.119884,
-     "end_time": "2022-05-19T11:49:05.166740",
+     "duration": 0.127187,
+     "end_time": "2022-05-19T12:05:03.583864",
      "exception": false,
-     "start_time": "2022-05-19T11:49:05.046856",
+     "start_time": "2022-05-19T12:05:03.456677",
      "status": "completed"
     },
     "tags": []
@@ -83,19 +83,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "581726fb",
+   "id": "81ad220f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T11:49:05.188281Z",
-     "iopub.status.busy": "2022-05-19T11:49:05.187607Z",
-     "iopub.status.idle": "2022-05-19T11:49:05.207089Z",
-     "shell.execute_reply": "2022-05-19T11:49:05.206205Z"
+     "iopub.execute_input": "2022-05-19T12:05:03.606973Z",
+     "iopub.status.busy": "2022-05-19T12:05:03.606680Z",
+     "iopub.status.idle": "2022-05-19T12:05:03.624424Z",
+     "shell.execute_reply": "2022-05-19T12:05:03.623854Z"
     },
     "papermill": {
-     "duration": 0.032505,
-     "end_time": "2022-05-19T11:49:05.209215",
+     "duration": 0.031853,
+     "end_time": "2022-05-19T12:05:03.626674",
      "exception": false,
-     "start_time": "2022-05-19T11:49:05.176710",
+     "start_time": "2022-05-19T12:05:03.594821",
      "status": "completed"
     },
     "tags": []
@@ -132,19 +132,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7f9ccdbf",
+   "id": "6a69e10d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T11:49:05.230969Z",
-     "iopub.status.busy": "2022-05-19T11:49:05.230422Z",
-     "iopub.status.idle": "2022-05-19T11:49:05.240505Z",
-     "shell.execute_reply": "2022-05-19T11:49:05.239549Z"
+     "iopub.execute_input": "2022-05-19T12:05:03.651803Z",
+     "iopub.status.busy": "2022-05-19T12:05:03.651109Z",
+     "iopub.status.idle": "2022-05-19T12:05:03.660527Z",
+     "shell.execute_reply": "2022-05-19T12:05:03.659904Z"
     },
     "papermill": {
-     "duration": 0.023114,
-     "end_time": "2022-05-19T11:49:05.242389",
+     "duration": 0.0236,
+     "end_time": "2022-05-19T12:05:03.662390",
      "exception": false,
-     "start_time": "2022-05-19T11:49:05.219275",
+     "start_time": "2022-05-19T12:05:03.638790",
      "status": "completed"
     },
     "tags": []
@@ -242,91 +242,65 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b06e991e",
+   "id": "970aeb7a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T11:49:05.265308Z",
-     "iopub.status.busy": "2022-05-19T11:49:05.265005Z",
-     "iopub.status.idle": "2022-05-19T11:49:05.271927Z",
-     "shell.execute_reply": "2022-05-19T11:49:05.271411Z"
+     "iopub.execute_input": "2022-05-19T12:05:03.687999Z",
+     "iopub.status.busy": "2022-05-19T12:05:03.687467Z",
+     "iopub.status.idle": "2022-05-19T12:05:03.698412Z",
+     "shell.execute_reply": "2022-05-19T12:05:03.697796Z"
     },
     "papermill": {
-     "duration": 0.020943,
-     "end_time": "2022-05-19T11:49:05.273911",
+     "duration": 0.026298,
+     "end_time": "2022-05-19T12:05:03.700735",
      "exception": false,
-     "start_time": "2022-05-19T11:49:05.252968",
+     "start_time": "2022-05-19T12:05:03.674437",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<bound method NDFrame.head of                   id  score\n",
-       "0   4112d61851461f60      0\n",
-       "1   09e418c93a776564      0\n",
-       "2   36baf228038e314b      0\n",
-       "3   1f37ead645e7f0c8      0\n",
-       "4   71a5b6ad068d531f      0\n",
-       "5   474c874d0c07bd21      0\n",
-       "6   442c114ed5c4e3c9      0\n",
-       "7   b8ae62ea5e1d8bdb      0\n",
-       "8   faaddaf8fcba8a3f      0\n",
-       "9   ae0262c02566d2ce      0\n",
-       "10  a8808e31641e856d      0\n",
-       "11  16ae4b99d3601e60      0\n",
-       "12  25c555ca3d5a2092      0\n",
-       "13  5203a36c501f1b7c      0\n",
-       "14  b9fdc772bb8fd61c      0\n",
-       "15  7aa5908a77a7ec24      0\n",
-       "16  d19ef3979396d47e      0\n",
-       "17  fd83613b7843f5e1      0\n",
-       "18  2a619016908bfa45      0\n",
-       "19  733979d75f59770d      0\n",
-       "20  6546846df17f9800      0\n",
-       "21  3ff0e7a35015be69      0\n",
-       "22  12ca31f018a2e2b9      0\n",
-       "23  03ba802ed4029e4d      0\n",
-       "24  c404f8b378cbb008      0\n",
-       "25  78243984c02a72e4      0\n",
-       "26  de51114bc0faec3e      0\n",
-       "27  7e3aff857f056bf9      0\n",
-       "28  26c3c6dc6174b589      0\n",
-       "29  b892011ab2e2cabc      0\n",
-       "30  8247ff562ca185cc      0\n",
-       "31  c057aecbba832387      0\n",
-       "32  9f2279ce667b21dc      0\n",
-       "33  b9ea2b06a878df6f      0\n",
-       "34  79795133c30ef097      0\n",
-       "35  25522ee5411e63e9      0>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id       object\n",
+      "score     int64\n",
+      "dtype: object\n",
+      "Hello\n",
+      "id        object\n",
+      "score    float64\n",
+      "dtype: object\n"
+     ]
     }
    ],
    "source": [
-    "df_submit.head"
+    "df_submit.head\n",
+    "print(df_submit.dtypes)\n",
+    "print('Hello')\n",
+    "df_submit['score']=df_submit['score'].astype('float')\n",
+    "#df_submit = df_submit.astype({'score':'float64'}).dtypes\n",
+    "print(df_submit.dtypes)\n",
+    "\n",
+    "#df.astype({'col1': 'int32'}).dtypes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b876e932",
+   "id": "7fe7a384",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T11:49:05.297794Z",
-     "iopub.status.busy": "2022-05-19T11:49:05.297086Z",
-     "iopub.status.idle": "2022-05-19T11:49:05.316175Z",
-     "shell.execute_reply": "2022-05-19T11:49:05.315567Z"
+     "iopub.execute_input": "2022-05-19T12:05:03.726910Z",
+     "iopub.status.busy": "2022-05-19T12:05:03.726636Z",
+     "iopub.status.idle": "2022-05-19T12:05:03.745340Z",
+     "shell.execute_reply": "2022-05-19T12:05:03.744536Z"
     },
     "papermill": {
-     "duration": 0.03338,
-     "end_time": "2022-05-19T11:49:05.318294",
+     "duration": 0.034325,
+     "end_time": "2022-05-19T12:05:03.747379",
      "exception": false,
-     "start_time": "2022-05-19T11:49:05.284914",
+     "start_time": "2022-05-19T12:05:03.713054",
      "status": "completed"
     },
     "tags": []
@@ -377,64 +351,73 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a499835d",
+   "id": "c19bd89a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T11:49:05.341756Z",
-     "iopub.status.busy": "2022-05-19T11:49:05.341434Z",
-     "iopub.status.idle": "2022-05-19T11:49:05.348812Z",
-     "shell.execute_reply": "2022-05-19T11:49:05.348179Z"
+     "iopub.execute_input": "2022-05-19T12:05:03.773143Z",
+     "iopub.status.busy": "2022-05-19T12:05:03.772319Z",
+     "iopub.status.idle": "2022-05-19T12:05:03.783893Z",
+     "shell.execute_reply": "2022-05-19T12:05:03.783022Z"
     },
     "papermill": {
-     "duration": 0.021499,
-     "end_time": "2022-05-19T11:49:05.350852",
+     "duration": 0.026804,
+     "end_time": "2022-05-19T12:05:03.786206",
      "exception": false,
-     "start_time": "2022-05-19T11:49:05.329353",
+     "start_time": "2022-05-19T12:05:03.759402",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id        object\n",
+      "score    float64\n",
+      "dtype: object\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "<bound method NDFrame.head of                   id  score\n",
-       "0   4112d61851461f60      1\n",
-       "1   09e418c93a776564      1\n",
-       "2   36baf228038e314b      0\n",
-       "3   1f37ead645e7f0c8      0\n",
-       "4   71a5b6ad068d531f      0\n",
-       "5   474c874d0c07bd21      1\n",
-       "6   442c114ed5c4e3c9      0\n",
-       "7   b8ae62ea5e1d8bdb      0\n",
-       "8   faaddaf8fcba8a3f      0\n",
-       "9   ae0262c02566d2ce      1\n",
-       "10  a8808e31641e856d      0\n",
-       "11  16ae4b99d3601e60      0\n",
-       "12  25c555ca3d5a2092      1\n",
-       "13  5203a36c501f1b7c      1\n",
-       "14  b9fdc772bb8fd61c      1\n",
-       "15  7aa5908a77a7ec24      0\n",
-       "16  d19ef3979396d47e      0\n",
-       "17  fd83613b7843f5e1      0\n",
-       "18  2a619016908bfa45      0\n",
-       "19  733979d75f59770d      0\n",
-       "20  6546846df17f9800      0\n",
-       "21  3ff0e7a35015be69      0\n",
-       "22  12ca31f018a2e2b9      0\n",
-       "23  03ba802ed4029e4d      0\n",
-       "24  c404f8b378cbb008      0\n",
-       "25  78243984c02a72e4      0\n",
-       "26  de51114bc0faec3e      0\n",
-       "27  7e3aff857f056bf9      0\n",
-       "28  26c3c6dc6174b589      0\n",
-       "29  b892011ab2e2cabc      1\n",
-       "30  8247ff562ca185cc      0\n",
-       "31  c057aecbba832387      0\n",
-       "32  9f2279ce667b21dc      1\n",
-       "33  b9ea2b06a878df6f      0\n",
-       "34  79795133c30ef097      0\n",
-       "35  25522ee5411e63e9      0>"
+       "0   4112d61851461f60   1.00\n",
+       "1   09e418c93a776564   1.00\n",
+       "2   36baf228038e314b   0.25\n",
+       "3   1f37ead645e7f0c8   0.00\n",
+       "4   71a5b6ad068d531f   0.50\n",
+       "5   474c874d0c07bd21   1.00\n",
+       "6   442c114ed5c4e3c9   0.75\n",
+       "7   b8ae62ea5e1d8bdb   0.00\n",
+       "8   faaddaf8fcba8a3f   0.25\n",
+       "9   ae0262c02566d2ce   1.00\n",
+       "10  a8808e31641e856d   0.75\n",
+       "11  16ae4b99d3601e60   0.25\n",
+       "12  25c555ca3d5a2092   1.00\n",
+       "13  5203a36c501f1b7c   1.00\n",
+       "14  b9fdc772bb8fd61c   1.00\n",
+       "15  7aa5908a77a7ec24   0.25\n",
+       "16  d19ef3979396d47e   0.00\n",
+       "17  fd83613b7843f5e1   0.00\n",
+       "18  2a619016908bfa45   0.50\n",
+       "19  733979d75f59770d   0.00\n",
+       "20  6546846df17f9800   0.75\n",
+       "21  3ff0e7a35015be69   0.75\n",
+       "22  12ca31f018a2e2b9   0.25\n",
+       "23  03ba802ed4029e4d   0.00\n",
+       "24  c404f8b378cbb008   0.75\n",
+       "25  78243984c02a72e4   0.25\n",
+       "26  de51114bc0faec3e   0.75\n",
+       "27  7e3aff857f056bf9   0.00\n",
+       "28  26c3c6dc6174b589   0.25\n",
+       "29  b892011ab2e2cabc   1.00\n",
+       "30  8247ff562ca185cc   0.25\n",
+       "31  c057aecbba832387   0.00\n",
+       "32  9f2279ce667b21dc   1.00\n",
+       "33  b9ea2b06a878df6f   0.75\n",
+       "34  79795133c30ef097   0.25\n",
+       "35  25522ee5411e63e9   0.00>"
       ]
      },
      "execution_count": 7,
@@ -443,19 +426,45 @@
     }
    ],
    "source": [
+    "print(df_submit.dtypes)\n",
     "df_submit.head\n"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "e6333d59",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-19T12:05:03.814590Z",
+     "iopub.status.busy": "2022-05-19T12:05:03.814258Z",
+     "iopub.status.idle": "2022-05-19T12:05:03.821184Z",
+     "shell.execute_reply": "2022-05-19T12:05:03.820402Z"
+    },
+    "papermill": {
+     "duration": 0.024385,
+     "end_time": "2022-05-19T12:05:03.823507",
+     "exception": false,
+     "start_time": "2022-05-19T12:05:03.799122",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_submit.to_csv('submission.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cd8bde12",
+   "id": "452dc4c0",
    "metadata": {
     "papermill": {
-     "duration": 0.011242,
-     "end_time": "2022-05-19T11:49:05.373563",
+     "duration": 0.012696,
+     "end_time": "2022-05-19T12:05:03.849235",
      "exception": false,
-     "start_time": "2022-05-19T11:49:05.362321",
+     "start_time": "2022-05-19T12:05:03.836539",
      "status": "completed"
     },
     "tags": []
@@ -484,14 +493,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 10.762331,
-   "end_time": "2022-05-19T11:49:06.004670",
+   "duration": 11.491279,
+   "end_time": "2022-05-19T12:05:04.482629",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-05-19T11:48:55.242339",
+   "start_time": "2022-05-19T12:04:52.991350",
    "version": "2.3.4"
   }
  },
