Kaggle Notebook | Patent_Data_Exploration | Version 5

--- a/patent-data-exploration.ipynb
+++ b/patent-data-exploration.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "820f986f",
+   "id": "feb2b831",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:08:08.549729Z",
-     "iopub.status.busy": "2022-05-19T12:08:08.549086Z",
-     "iopub.status.idle": "2022-05-19T12:08:08.563766Z",
-     "shell.execute_reply": "2022-05-19T12:08:08.562659Z"
+     "iopub.execute_input": "2022-05-19T12:34:18.282291Z",
+     "iopub.status.busy": "2022-05-19T12:34:18.281770Z",
+     "iopub.status.idle": "2022-05-19T12:34:18.298557Z",
+     "shell.execute_reply": "2022-05-19T12:34:18.297652Z"
     },
     "papermill": {
-     "duration": 0.031936,
-     "end_time": "2022-05-19T12:08:08.567213",
+     "duration": 0.036052,
+     "end_time": "2022-05-19T12:34:18.300919",
      "exception": false,
-     "start_time": "2022-05-19T12:08:08.535277",
+     "start_time": "2022-05-19T12:34:18.264867",
      "status": "completed"
     },
     "tags": []
@@ -56,19 +56,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "83b0ec72",
+   "id": "bcb85622",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:08:08.592928Z",
-     "iopub.status.busy": "2022-05-19T12:08:08.592241Z",
-     "iopub.status.idle": "2022-05-19T12:08:08.723166Z",
-     "shell.execute_reply": "2022-05-19T12:08:08.722061Z"
+     "iopub.execute_input": "2022-05-19T12:34:18.332192Z",
+     "iopub.status.busy": "2022-05-19T12:34:18.331604Z",
+     "iopub.status.idle": "2022-05-19T12:34:18.447239Z",
+     "shell.execute_reply": "2022-05-19T12:34:18.446380Z"
     },
     "papermill": {
-     "duration": 0.146266,
-     "end_time": "2022-05-19T12:08:08.725780",
+     "duration": 0.134419,
+     "end_time": "2022-05-19T12:34:18.450081",
      "exception": false,
-     "start_time": "2022-05-19T12:08:08.579514",
+     "start_time": "2022-05-19T12:34:18.315662",
      "status": "completed"
     },
     "tags": []
@@ -83,19 +83,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f7f942e6",
+   "id": "40dd57c2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:08:08.750432Z",
-     "iopub.status.busy": "2022-05-19T12:08:08.750104Z",
-     "iopub.status.idle": "2022-05-19T12:08:08.769607Z",
-     "shell.execute_reply": "2022-05-19T12:08:08.768626Z"
+     "iopub.execute_input": "2022-05-19T12:34:18.481159Z",
+     "iopub.status.busy": "2022-05-19T12:34:18.480864Z",
+     "iopub.status.idle": "2022-05-19T12:34:18.499944Z",
+     "shell.execute_reply": "2022-05-19T12:34:18.498965Z"
     },
     "papermill": {
-     "duration": 0.034365,
-     "end_time": "2022-05-19T12:08:08.772089",
+     "duration": 0.037453,
+     "end_time": "2022-05-19T12:34:18.502274",
      "exception": false,
-     "start_time": "2022-05-19T12:08:08.737724",
+     "start_time": "2022-05-19T12:34:18.464821",
      "status": "completed"
     },
     "tags": []
@@ -132,19 +132,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "744dd0a1",
+   "id": "d618564d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:08:08.796658Z",
-     "iopub.status.busy": "2022-05-19T12:08:08.796110Z",
-     "iopub.status.idle": "2022-05-19T12:08:08.806852Z",
-     "shell.execute_reply": "2022-05-19T12:08:08.805849Z"
+     "iopub.execute_input": "2022-05-19T12:34:18.533077Z",
+     "iopub.status.busy": "2022-05-19T12:34:18.532679Z",
+     "iopub.status.idle": "2022-05-19T12:34:18.542998Z",
+     "shell.execute_reply": "2022-05-19T12:34:18.542331Z"
     },
     "papermill": {
-     "duration": 0.025766,
-     "end_time": "2022-05-19T12:08:08.809227",
+     "duration": 0.028048,
+     "end_time": "2022-05-19T12:34:18.544721",
      "exception": false,
-     "start_time": "2022-05-19T12:08:08.783461",
+     "start_time": "2022-05-19T12:34:18.516673",
      "status": "completed"
     },
     "tags": []
@@ -242,19 +242,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a9f3e829",
+   "id": "b8966bef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:08:08.835798Z",
-     "iopub.status.busy": "2022-05-19T12:08:08.835513Z",
-     "iopub.status.idle": "2022-05-19T12:08:08.846311Z",
-     "shell.execute_reply": "2022-05-19T12:08:08.845570Z"
+     "iopub.execute_input": "2022-05-19T12:34:18.575820Z",
+     "iopub.status.busy": "2022-05-19T12:34:18.575522Z",
+     "iopub.status.idle": "2022-05-19T12:34:18.587126Z",
+     "shell.execute_reply": "2022-05-19T12:34:18.586174Z"
     },
     "papermill": {
-     "duration": 0.02785,
-     "end_time": "2022-05-19T12:08:08.849074",
+     "duration": 0.03008,
+     "end_time": "2022-05-19T12:34:18.589387",
      "exception": false,
-     "start_time": "2022-05-19T12:08:08.821224",
+     "start_time": "2022-05-19T12:34:18.559307",
      "status": "completed"
     },
     "tags": []
@@ -288,19 +288,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "34bd953d",
+   "id": "8ccb9570",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:08:08.875650Z",
-     "iopub.status.busy": "2022-05-19T12:08:08.875336Z",
-     "iopub.status.idle": "2022-05-19T12:08:08.895254Z",
-     "shell.execute_reply": "2022-05-19T12:08:08.894451Z"
+     "iopub.execute_input": "2022-05-19T12:34:18.620952Z",
+     "iopub.status.busy": "2022-05-19T12:34:18.620151Z",
+     "iopub.status.idle": "2022-05-19T12:34:18.638372Z",
+     "shell.execute_reply": "2022-05-19T12:34:18.637574Z"
     },
     "papermill": {
-     "duration": 0.03601,
-     "end_time": "2022-05-19T12:08:08.897470",
+     "duration": 0.036348,
+     "end_time": "2022-05-19T12:34:18.640625",
      "exception": false,
-     "start_time": "2022-05-19T12:08:08.861460",
+     "start_time": "2022-05-19T12:34:18.604277",
      "status": "completed"
     },
     "tags": []
@@ -351,19 +351,44 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8f0aa54b",
+   "id": "fefe5b75",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:08:08.925346Z",
-     "iopub.status.busy": "2022-05-19T12:08:08.924340Z",
-     "iopub.status.idle": "2022-05-19T12:08:08.936616Z",
-     "shell.execute_reply": "2022-05-19T12:08:08.935554Z"
+     "iopub.execute_input": "2022-05-19T12:34:18.672404Z",
+     "iopub.status.busy": "2022-05-19T12:34:18.671598Z",
+     "iopub.status.idle": "2022-05-19T12:34:18.681255Z",
+     "shell.execute_reply": "2022-05-19T12:34:18.680380Z"
     },
     "papermill": {
-     "duration": 0.028635,
-     "end_time": "2022-05-19T12:08:08.939079",
+     "duration": 0.028414,
+     "end_time": "2022-05-19T12:34:18.683951",
      "exception": false,
-     "start_time": "2022-05-19T12:08:08.910444",
+     "start_time": "2022-05-19T12:34:18.655537",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "data = [['4112d61851461f60',1],['09e418c93a776564',1],['36baf228038e314b',0.25],['1f37ead645e7f0c8',0],['71a5b6ad068d531f',0.5],['474c874d0c07bd21',1],['442c114ed5c4e3c9',0.75],['b8ae62ea5e1d8bdb',0],['faaddaf8fcba8a3f',0.25],['ae0262c02566d2ce',1],['a8808e31641e856d',0.75],['16ae4b99d3601e60',0.25],['25c555ca3d5a2092',1],['5203a36c501f1b7c',1],['b9fdc772bb8fd61c',1],['7aa5908a77a7ec24',0.25],['d19ef3979396d47e',0],['fd83613b7843f5e1',0],['2a619016908bfa45',0.5],['733979d75f59770d',0],['6546846df17f9800',0.75],['3ff0e7a35015be69',0.75],['12ca31f018a2e2b9',0.25],['03ba802ed4029e4d',0],['c404f8b378cbb008',0.75],['78243984c02a72e4',0.25],['de51114bc0faec3e',0.75],['7e3aff857f056bf9',0],['26c3c6dc6174b589',0.25],['b892011ab2e2cabc',1],['8247ff562ca185cc',0.25],['c057aecbba832387',0],['9f2279ce667b21dc',1],['b9ea2b06a878df6f',0.75],['79795133c30ef097',0.25],['25522ee5411e63e9',0]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2c2178f8",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-19T12:34:18.717026Z",
+     "iopub.status.busy": "2022-05-19T12:34:18.716728Z",
+     "iopub.status.idle": "2022-05-19T12:34:18.722593Z",
+     "shell.execute_reply": "2022-05-19T12:34:18.721977Z"
+    },
+    "papermill": {
+     "duration": 0.025095,
+     "end_time": "2022-05-19T12:34:18.725236",
+     "exception": false,
+     "start_time": "2022-05-19T12:34:18.700141",
      "status": "completed"
     },
     "tags": []
@@ -373,98 +398,102 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id        object\n",
-      "score    float64\n",
-      "dtype: object\n"
+      "hi\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<bound method NDFrame.head of                   id  score\n",
-       "0   4112d61851461f60   1.00\n",
-       "1   09e418c93a776564   1.00\n",
-       "2   36baf228038e314b   0.25\n",
-       "3   1f37ead645e7f0c8   0.00\n",
-       "4   71a5b6ad068d531f   0.50\n",
-       "5   474c874d0c07bd21   1.00\n",
-       "6   442c114ed5c4e3c9   0.75\n",
-       "7   b8ae62ea5e1d8bdb   0.00\n",
-       "8   faaddaf8fcba8a3f   0.25\n",
-       "9   ae0262c02566d2ce   1.00\n",
-       "10  a8808e31641e856d   0.75\n",
-       "11  16ae4b99d3601e60   0.25\n",
-       "12  25c555ca3d5a2092   1.00\n",
-       "13  5203a36c501f1b7c   1.00\n",
-       "14  b9fdc772bb8fd61c   1.00\n",
-       "15  7aa5908a77a7ec24   0.25\n",
-       "16  d19ef3979396d47e   0.00\n",
-       "17  fd83613b7843f5e1   0.00\n",
-       "18  2a619016908bfa45   0.50\n",
-       "19  733979d75f59770d   0.00\n",
-       "20  6546846df17f9800   0.75\n",
-       "21  3ff0e7a35015be69   0.75\n",
-       "22  12ca31f018a2e2b9   0.25\n",
-       "23  03ba802ed4029e4d   0.00\n",
-       "24  c404f8b378cbb008   0.75\n",
-       "25  78243984c02a72e4   0.25\n",
-       "26  de51114bc0faec3e   0.75\n",
-       "27  7e3aff857f056bf9   0.00\n",
-       "28  26c3c6dc6174b589   0.25\n",
-       "29  b892011ab2e2cabc   1.00\n",
-       "30  8247ff562ca185cc   0.25\n",
-       "31  c057aecbba832387   0.00\n",
-       "32  9f2279ce667b21dc   1.00\n",
-       "33  b9ea2b06a878df6f   0.75\n",
-       "34  79795133c30ef097   0.25\n",
-       "35  25522ee5411e63e9   0.00>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(df_submit.dtypes)\n",
-    "df_submit.head\n"
+    "df_submit_manual = pd.DataFrame(data, columns = ['id', 'score'])\n",
+    "df_submit_manual.head\n",
+    "print(\"hi\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "04f716a7",
+   "execution_count": 9,
+   "id": "f0c571b5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:08:08.970067Z",
-     "iopub.status.busy": "2022-05-19T12:08:08.969594Z",
-     "iopub.status.idle": "2022-05-19T12:08:08.978094Z",
-     "shell.execute_reply": "2022-05-19T12:08:08.977164Z"
+     "iopub.execute_input": "2022-05-19T12:34:18.759548Z",
+     "iopub.status.busy": "2022-05-19T12:34:18.758728Z",
+     "iopub.status.idle": "2022-05-19T12:34:18.765771Z",
+     "shell.execute_reply": "2022-05-19T12:34:18.765151Z"
     },
     "papermill": {
-     "duration": 0.026139,
-     "end_time": "2022-05-19T12:08:08.980608",
+     "duration": 0.026599,
+     "end_time": "2022-05-19T12:34:18.768143",
      "exception": false,
-     "start_time": "2022-05-19T12:08:08.954469",
+     "start_time": "2022-05-19T12:34:18.741544",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df_submit.to_csv('submission.csv',index=False)"
+    "df_submit_manual.to_csv('submission.csv',index=False)\n",
+    "#df_submit.to_csv('/kaggle/working/submission.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b11a80d7",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-19T12:34:18.801523Z",
+     "iopub.status.busy": "2022-05-19T12:34:18.801247Z",
+     "iopub.status.idle": "2022-05-19T12:34:18.805475Z",
+     "shell.execute_reply": "2022-05-19T12:34:18.804565Z"
+    },
+    "papermill": {
+     "duration": 0.022994,
+     "end_time": "2022-05-19T12:34:18.807603",
+     "exception": false,
+     "start_time": "2022-05-19T12:34:18.784609",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#df_new = pd.read_csv('/kaggle/working/submission.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6de6ad75",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-19T12:34:18.841564Z",
+     "iopub.status.busy": "2022-05-19T12:34:18.841289Z",
+     "iopub.status.idle": "2022-05-19T12:34:18.844576Z",
+     "shell.execute_reply": "2022-05-19T12:34:18.843748Z"
+    },
+    "papermill": {
+     "duration": 0.022421,
+     "end_time": "2022-05-19T12:34:18.846638",
+     "exception": false,
+     "start_time": "2022-05-19T12:34:18.824217",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#df_new.head\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8de2476",
+   "id": "caeeba29",
    "metadata": {
     "papermill": {
-     "duration": 0.012895,
-     "end_time": "2022-05-19T12:08:09.006836",
+     "duration": 0.015758,
+     "end_time": "2022-05-19T12:34:18.878063",
      "exception": false,
-     "start_time": "2022-05-19T12:08:08.993941",
+     "start_time": "2022-05-19T12:34:18.862305",
      "status": "completed"
     },
     "tags": []
@@ -493,14 +522,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 13.883311,
-   "end_time": "2022-05-19T12:08:09.742000",
+   "duration": 11.919422,
+   "end_time": "2022-05-19T12:34:19.514044",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-05-19T12:07:55.858689",
+   "start_time": "2022-05-19T12:34:07.594622",
    "version": "2.3.4"
   }
  },
