--- a/patent-data-exploration.ipynb
+++ b/patent-data-exploration.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "feb2b831",
+   "id": "e0ddb9ef",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:34:18.282291Z",
-     "iopub.status.busy": "2022-05-19T12:34:18.281770Z",
-     "iopub.status.idle": "2022-05-19T12:34:18.298557Z",
-     "shell.execute_reply": "2022-05-19T12:34:18.297652Z"
+     "iopub.execute_input": "2022-05-19T12:40:59.452156Z",
+     "iopub.status.busy": "2022-05-19T12:40:59.451766Z",
+     "iopub.status.idle": "2022-05-19T12:40:59.467371Z",
+     "shell.execute_reply": "2022-05-19T12:40:59.466451Z"
     },
     "papermill": {
-     "duration": 0.036052,
-     "end_time": "2022-05-19T12:34:18.300919",
+     "duration": 0.034776,
+     "end_time": "2022-05-19T12:40:59.470130",
      "exception": false,
-     "start_time": "2022-05-19T12:34:18.264867",
+     "start_time": "2022-05-19T12:40:59.435354",
      "status": "completed"
     },
     "tags": []
@@ -56,19 +56,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bcb85622",
+   "id": "07c8b7f9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:34:18.332192Z",
-     "iopub.status.busy": "2022-05-19T12:34:18.331604Z",
-     "iopub.status.idle": "2022-05-19T12:34:18.447239Z",
-     "shell.execute_reply": "2022-05-19T12:34:18.446380Z"
+     "iopub.execute_input": "2022-05-19T12:40:59.500925Z",
+     "iopub.status.busy": "2022-05-19T12:40:59.500456Z",
+     "iopub.status.idle": "2022-05-19T12:40:59.613277Z",
+     "shell.execute_reply": "2022-05-19T12:40:59.612125Z"
     },
     "papermill": {
-     "duration": 0.134419,
-     "end_time": "2022-05-19T12:34:18.450081",
+     "duration": 0.130704,
+     "end_time": "2022-05-19T12:40:59.615860",
      "exception": false,
-     "start_time": "2022-05-19T12:34:18.315662",
+     "start_time": "2022-05-19T12:40:59.485156",
      "status": "completed"
     },
     "tags": []
@@ -83,19 +83,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "40dd57c2",
+   "id": "e67fc0af",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:34:18.481159Z",
-     "iopub.status.busy": "2022-05-19T12:34:18.480864Z",
-     "iopub.status.idle": "2022-05-19T12:34:18.499944Z",
-     "shell.execute_reply": "2022-05-19T12:34:18.498965Z"
+     "iopub.execute_input": "2022-05-19T12:40:59.645997Z",
+     "iopub.status.busy": "2022-05-19T12:40:59.645477Z",
+     "iopub.status.idle": "2022-05-19T12:40:59.664910Z",
+     "shell.execute_reply": "2022-05-19T12:40:59.663770Z"
     },
     "papermill": {
-     "duration": 0.037453,
-     "end_time": "2022-05-19T12:34:18.502274",
+     "duration": 0.037229,
+     "end_time": "2022-05-19T12:40:59.667141",
      "exception": false,
-     "start_time": "2022-05-19T12:34:18.464821",
+     "start_time": "2022-05-19T12:40:59.629912",
      "status": "completed"
     },
     "tags": []
@@ -132,19 +132,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d618564d",
+   "id": "b403fd3d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:34:18.533077Z",
-     "iopub.status.busy": "2022-05-19T12:34:18.532679Z",
-     "iopub.status.idle": "2022-05-19T12:34:18.542998Z",
-     "shell.execute_reply": "2022-05-19T12:34:18.542331Z"
+     "iopub.execute_input": "2022-05-19T12:40:59.697509Z",
+     "iopub.status.busy": "2022-05-19T12:40:59.697023Z",
+     "iopub.status.idle": "2022-05-19T12:40:59.706777Z",
+     "shell.execute_reply": "2022-05-19T12:40:59.705890Z"
     },
     "papermill": {
-     "duration": 0.028048,
-     "end_time": "2022-05-19T12:34:18.544721",
+     "duration": 0.027353,
+     "end_time": "2022-05-19T12:40:59.708776",
      "exception": false,
-     "start_time": "2022-05-19T12:34:18.516673",
+     "start_time": "2022-05-19T12:40:59.681423",
      "status": "completed"
     },
     "tags": []
@@ -242,45 +242,31 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b8966bef",
+   "id": "fab125ae",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:34:18.575820Z",
-     "iopub.status.busy": "2022-05-19T12:34:18.575522Z",
-     "iopub.status.idle": "2022-05-19T12:34:18.587126Z",
-     "shell.execute_reply": "2022-05-19T12:34:18.586174Z"
+     "iopub.execute_input": "2022-05-19T12:40:59.741235Z",
+     "iopub.status.busy": "2022-05-19T12:40:59.740308Z",
+     "iopub.status.idle": "2022-05-19T12:40:59.748767Z",
+     "shell.execute_reply": "2022-05-19T12:40:59.747935Z"
     },
     "papermill": {
-     "duration": 0.03008,
-     "end_time": "2022-05-19T12:34:18.589387",
+     "duration": 0.027152,
+     "end_time": "2022-05-19T12:40:59.751001",
      "exception": false,
-     "start_time": "2022-05-19T12:34:18.559307",
+     "start_time": "2022-05-19T12:40:59.723849",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "id       object\n",
-      "score     int64\n",
-      "dtype: object\n",
-      "Hello\n",
-      "id        object\n",
-      "score    float64\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_submit.head\n",
-    "print(df_submit.dtypes)\n",
-    "print('Hello')\n",
+    "#print(df_submit.dtypes)\n",
+    "#print('Hello')\n",
     "df_submit['score']=df_submit['score'].astype('float')\n",
     "#df_submit = df_submit.astype({'score':'float64'}).dtypes\n",
-    "print(df_submit.dtypes)\n",
+    "#print(df_submit.dtypes)\n",
     "\n",
     "#df.astype({'col1': 'int32'}).dtypes"
    ]
@@ -288,19 +274,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8ccb9570",
+   "id": "3b00bcea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:34:18.620952Z",
-     "iopub.status.busy": "2022-05-19T12:34:18.620151Z",
-     "iopub.status.idle": "2022-05-19T12:34:18.638372Z",
-     "shell.execute_reply": "2022-05-19T12:34:18.637574Z"
+     "iopub.execute_input": "2022-05-19T12:40:59.782346Z",
+     "iopub.status.busy": "2022-05-19T12:40:59.781751Z",
+     "iopub.status.idle": "2022-05-19T12:40:59.800569Z",
+     "shell.execute_reply": "2022-05-19T12:40:59.799881Z"
     },
     "papermill": {
-     "duration": 0.036348,
-     "end_time": "2022-05-19T12:34:18.640625",
+     "duration": 0.037014,
+     "end_time": "2022-05-19T12:40:59.802780",
      "exception": false,
-     "start_time": "2022-05-19T12:34:18.604277",
+     "start_time": "2022-05-19T12:40:59.765766",
      "status": "completed"
     },
     "tags": []
@@ -351,19 +337,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fefe5b75",
+   "id": "640958f6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:34:18.672404Z",
-     "iopub.status.busy": "2022-05-19T12:34:18.671598Z",
-     "iopub.status.idle": "2022-05-19T12:34:18.681255Z",
-     "shell.execute_reply": "2022-05-19T12:34:18.680380Z"
+     "iopub.execute_input": "2022-05-19T12:40:59.833707Z",
+     "iopub.status.busy": "2022-05-19T12:40:59.833116Z",
+     "iopub.status.idle": "2022-05-19T12:40:59.841671Z",
+     "shell.execute_reply": "2022-05-19T12:40:59.841015Z"
     },
     "papermill": {
-     "duration": 0.028414,
-     "end_time": "2022-05-19T12:34:18.683951",
+     "duration": 0.027082,
+     "end_time": "2022-05-19T12:40:59.844395",
      "exception": false,
-     "start_time": "2022-05-19T12:34:18.655537",
+     "start_time": "2022-05-19T12:40:59.817313",
      "status": "completed"
     },
     "tags": []
@@ -376,54 +362,93 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2c2178f8",
+   "id": "3957842c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:34:18.717026Z",
-     "iopub.status.busy": "2022-05-19T12:34:18.716728Z",
-     "iopub.status.idle": "2022-05-19T12:34:18.722593Z",
-     "shell.execute_reply": "2022-05-19T12:34:18.721977Z"
+     "iopub.execute_input": "2022-05-19T12:40:59.877181Z",
+     "iopub.status.busy": "2022-05-19T12:40:59.876743Z",
+     "iopub.status.idle": "2022-05-19T12:40:59.886374Z",
+     "shell.execute_reply": "2022-05-19T12:40:59.885693Z"
     },
     "papermill": {
-     "duration": 0.025095,
-     "end_time": "2022-05-19T12:34:18.725236",
+     "duration": 0.028578,
+     "end_time": "2022-05-19T12:40:59.888244",
      "exception": false,
-     "start_time": "2022-05-19T12:34:18.700141",
+     "start_time": "2022-05-19T12:40:59.859666",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hi\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of                   id  score\n",
+       "0   4112d61851461f60   1.00\n",
+       "1   09e418c93a776564   1.00\n",
+       "2   36baf228038e314b   0.25\n",
+       "3   1f37ead645e7f0c8   0.00\n",
+       "4   71a5b6ad068d531f   0.50\n",
+       "5   474c874d0c07bd21   1.00\n",
+       "6   442c114ed5c4e3c9   0.75\n",
+       "7   b8ae62ea5e1d8bdb   0.00\n",
+       "8   faaddaf8fcba8a3f   0.25\n",
+       "9   ae0262c02566d2ce   1.00\n",
+       "10  a8808e31641e856d   0.75\n",
+       "11  16ae4b99d3601e60   0.25\n",
+       "12  25c555ca3d5a2092   1.00\n",
+       "13  5203a36c501f1b7c   1.00\n",
+       "14  b9fdc772bb8fd61c   1.00\n",
+       "15  7aa5908a77a7ec24   0.25\n",
+       "16  d19ef3979396d47e   0.00\n",
+       "17  fd83613b7843f5e1   0.00\n",
+       "18  2a619016908bfa45   0.50\n",
+       "19  733979d75f59770d   0.00\n",
+       "20  6546846df17f9800   0.75\n",
+       "21  3ff0e7a35015be69   0.75\n",
+       "22  12ca31f018a2e2b9   0.25\n",
+       "23  03ba802ed4029e4d   0.00\n",
+       "24  c404f8b378cbb008   0.75\n",
+       "25  78243984c02a72e4   0.25\n",
+       "26  de51114bc0faec3e   0.75\n",
+       "27  7e3aff857f056bf9   0.00\n",
+       "28  26c3c6dc6174b589   0.25\n",
+       "29  b892011ab2e2cabc   1.00\n",
+       "30  8247ff562ca185cc   0.25\n",
+       "31  c057aecbba832387   0.00\n",
+       "32  9f2279ce667b21dc   1.00\n",
+       "33  b9ea2b06a878df6f   0.75\n",
+       "34  79795133c30ef097   0.25\n",
+       "35  25522ee5411e63e9   0.00>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df_submit_manual = pd.DataFrame(data, columns = ['id', 'score'])\n",
     "df_submit_manual.head\n",
-    "print(\"hi\")"
+    "#print(\"hi\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f0c571b5",
+   "id": "b04576eb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:34:18.759548Z",
-     "iopub.status.busy": "2022-05-19T12:34:18.758728Z",
-     "iopub.status.idle": "2022-05-19T12:34:18.765771Z",
-     "shell.execute_reply": "2022-05-19T12:34:18.765151Z"
+     "iopub.execute_input": "2022-05-19T12:40:59.921376Z",
+     "iopub.status.busy": "2022-05-19T12:40:59.920895Z",
+     "iopub.status.idle": "2022-05-19T12:40:59.927384Z",
+     "shell.execute_reply": "2022-05-19T12:40:59.926674Z"
     },
     "papermill": {
-     "duration": 0.026599,
-     "end_time": "2022-05-19T12:34:18.768143",
+     "duration": 0.026325,
+     "end_time": "2022-05-19T12:40:59.929644",
      "exception": false,
-     "start_time": "2022-05-19T12:34:18.741544",
+     "start_time": "2022-05-19T12:40:59.903319",
      "status": "completed"
     },
     "tags": []
@@ -437,19 +462,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b11a80d7",
+   "id": "0430bc63",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:34:18.801523Z",
-     "iopub.status.busy": "2022-05-19T12:34:18.801247Z",
-     "iopub.status.idle": "2022-05-19T12:34:18.805475Z",
-     "shell.execute_reply": "2022-05-19T12:34:18.804565Z"
+     "iopub.execute_input": "2022-05-19T12:40:59.962201Z",
+     "iopub.status.busy": "2022-05-19T12:40:59.961693Z",
+     "iopub.status.idle": "2022-05-19T12:40:59.964868Z",
+     "shell.execute_reply": "2022-05-19T12:40:59.964250Z"
     },
     "papermill": {
-     "duration": 0.022994,
-     "end_time": "2022-05-19T12:34:18.807603",
+     "duration": 0.021654,
+     "end_time": "2022-05-19T12:40:59.966795",
      "exception": false,
-     "start_time": "2022-05-19T12:34:18.784609",
+     "start_time": "2022-05-19T12:40:59.945141",
      "status": "completed"
     },
     "tags": []
@@ -462,19 +487,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6de6ad75",
+   "id": "9390f3ac",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-05-19T12:34:18.841564Z",
-     "iopub.status.busy": "2022-05-19T12:34:18.841289Z",
-     "iopub.status.idle": "2022-05-19T12:34:18.844576Z",
-     "shell.execute_reply": "2022-05-19T12:34:18.843748Z"
+     "iopub.execute_input": "2022-05-19T12:41:00.000804Z",
+     "iopub.status.busy": "2022-05-19T12:41:00.000309Z",
+     "iopub.status.idle": "2022-05-19T12:41:00.003520Z",
+     "shell.execute_reply": "2022-05-19T12:41:00.002824Z"
     },
     "papermill": {
-     "duration": 0.022421,
-     "end_time": "2022-05-19T12:34:18.846638",
+     "duration": 0.02164,
+     "end_time": "2022-05-19T12:41:00.005410",
      "exception": false,
-     "start_time": "2022-05-19T12:34:18.824217",
+     "start_time": "2022-05-19T12:40:59.983770",
      "status": "completed"
     },
     "tags": []
@@ -487,13 +512,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caeeba29",
+   "id": "d482d6db",
    "metadata": {
     "papermill": {
-     "duration": 0.015758,
-     "end_time": "2022-05-19T12:34:18.878063",
+     "duration": 0.01497,
+     "end_time": "2022-05-19T12:41:00.035889",
      "exception": false,
-     "start_time": "2022-05-19T12:34:18.862305",
+     "start_time": "2022-05-19T12:41:00.020919",
      "status": "completed"
     },
     "tags": []
@@ -522,14 +547,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 11.919422,
-   "end_time": "2022-05-19T12:34:19.514044",
+   "duration": 12.633465,
+   "end_time": "2022-05-19T12:41:00.774363",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-05-19T12:34:07.594622",
+   "start_time": "2022-05-19T12:40:48.140898",
    "version": "2.3.4"
   }
  },
